sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:5: error: Unmatched closing brace '}' ignored here
 for (i<-beg to x) {if ((isSmaller((i+1), i))) {swap((i+1), i); test=false}}; x=x-1};
                                                                                   ^